fixed z-index bug for editor page selector, soft error modal

--- a/appcubator/static/css/app/editor/editor.less
+++ b/appcubator/static/css/app/editor/editor.less
@@ -1726,7 +1726,7 @@ width: 945px;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #364353), color-stop(100%, #2d3747)) !important;
   border-bottom: 1px solid #1b2535;
   overflow: visible;
-  z-index: 1100;
+  z-index: 9999;
 }
 
 .menu-button {
