--- a/appcubator/static/css/app/pages.less
+++ b/appcubator/static/css/app/pages.less
@@ -103,6 +103,7 @@
   background-size: auto 100%;
   background-position: bottom;
    -webkit-animation: flyUp 0.4s ease-out;
+   z-index: 9999;
 }
 
 .soft-error-modal span {
